# plant_game

./: !build.bat  .gitignore  CMakeLists.txt  README.md
Engine/: !build.bat  CMakeLists.txt  Sprite.hpp  cludes.hpp  engine.cpp  engine.h  engine.hpp  main.cpp  vars.hpp
Engine/.cache/clangd/index/: Shader.hpp.E92E2FB00FF015B5.idx  Sprite.hpp.1A4D2D90186E0D14.idx  Texture.hpp.CC3F930A71F8463E.idx  VAO.hpp.AF8A04E4028379D8.idx  VBO.hpp.CAA878A1D71C9CB0.idx  cludes.hpp.47456F7EE4AED271.idx  context.c.E74CDEC5132FFD3C.idx  egl_context.c.4C0FB87F23AC2605.idx  engine.cpp.75EC243B4C540BF0.idx  engine.h.03690EEE21829161.idx  glad.c.E8E12B3E60A73EC6.idx  glad.h.7379D80B5E1FABB8.idx  glfw3.h.701207124D9091B3.idx  glfw3native.h.3B668F8FA2522CB0.idx  init.c.4CE9EE7EDEE40806.idx  input.c.44558DFE080B6001.idx  internal.h.76A6C9C22AC11B7A.idx  khrplatform.h.10BA56B3EB70805A.idx  main.cpp.931AF6CC7CDEBAB8.idx  mappings.h.F41971957467C49C.idx  monitor.c.A1AA821715A1F912.idx  null_init.c.41DE5EB24FE4BB1D.idx  null_joystick.c.64458D808AE59F23.idx  null_joystick.h.631F3C31A31F0B3D.idx  null_monitor.c.CF08783AE4EE81E9.idx  null_platform.h.896DADB25A52A33B.idx  null_window.c.C59730CFA6C82AD9.idx  osmesa_context.c.7EBDC6A6FFD019F5.idx  platform.c.02D6B24A3DE6AC0A.idx  platform.h.06294378E4751EFA.idx  stb_image.h.150DBDA79164AB77.idx  vars.hpp.D8AD0C0346BB5F60.idx  vulkan.c.931DF04269C5FAAF.idx  wgl_context.c.7D7F45251310FEB1.idx  win32_init.c.CEF93D66C1F4BE85.idx  win32_joystick.c.75F2D9229268A298.idx  win32_joystick.h.FD02A0180FB70FAC.idx  win32_module.c.4B9F1289405CF2DB.idx  win32_monitor.c.7234FA5B889125D4.idx  win32_platform.h.010C4DC58A2D5E2F.idx  (+6 more)
Engine/ecs/: default_system.hpp  ecs.hpp
Engine/libs/glad/include/glad/: glad.h
Engine/libs/glad/src/: glad.c
Engine/primitives/: Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
Engine/render/: Shader.hpp  Sprite.hpp  Texture.hpp  VAO.hpp  VBO.hpp
Engine/src/: main.cpp
src/: compile_commands.json  main.cpp
(+5 files in other folders)
